exports[`TransactionListComponent Snapshots renders correctly while loading 1`] = `
<div
  id="TransactionList">
  <section
    className="mt-header">
    <h2>
      Transactions
    </h2>
  </section>
  <section
    className="mt-body">
    <div
      className="spinner-container">
      <i
        aria-hidden="true"
        className="fa fa-circle-o-notch fa-spin fa-2x spinner" />
    </div>
  </section>
  <section
    className="mt-footer">
    footer
  </section>
</div>
`;

exports[`TransactionListComponent Snapshots renders correctly with no transactions 1`] = `
<div
  id="TransactionList">
  <section
    className="mt-header">
    <h2>
      Transactions
    </h2>
  </section>
  <section
    className="mt-body">
    <div
      className="placeholder">
      No Transactions For Account
    </div>
  </section>
  <section
    className="mt-footer">
    footer
  </section>
</div>
`;

exports[`TransactionListComponent Snapshots renders correctly with transactions and categoriees 1`] = `
<div
  id="TransactionList">
  <section
    className="mt-header">
    <h2>
      Transactions
    </h2>
  </section>
  <section
    className="mt-body">
    <ul
      className="scroll-view">
      <li
        className="date-divider">
        08/11/2017
      </li>
      <li
        className="Transaction"
        onClick={[Function]}>
        <span
          className="category">
          First Category
        </span>
        <span
          className="date">
          08/11/2017
        </span>
        <span
          className="amount">
          $10.00
        </span>
      </li>
    </ul>
  </section>
  <section
    className="mt-footer">
    footer
  </section>
</div>
`;

exports[`TransactionListComponent Snapshots renders correctly with transactions, no categories 1`] = `
<div
  id="TransactionList">
  <section
    className="mt-header">
    <h2>
      Transactions
    </h2>
  </section>
  <section
    className="mt-body">
    <ul
      className="scroll-view">
      <li
        className="date-divider">
        08/11/2017
      </li>
      <li
        className="Transaction"
        onClick={[Function]}>
        <span
          className="category">
          category-1
        </span>
        <span
          className="date">
          08/11/2017
        </span>
        <span
          className="amount">
          $10.00
        </span>
      </li>
    </ul>
  </section>
  <section
    className="mt-footer">
    footer
  </section>
</div>
`;
